# KisanMindzip-1

./: .env.example  .gitignore  .mandi_trend.json  .replit  README.md  app.py  chat.py  crop_doctor.py  crop_model.pkl  gemini_cropdoctor.py  index.html  mandi_bhav.py  mandi_cities.py  mandi_nearest.py  predict.py  pyproject.toml  region_soil.py  render.yaml  replit.md  requirements.txt  sarkari_yojana.py  schemes.json  soil_agent.py  soil_data.json  test_crop.py  train.py
