[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "groq>=1.2.0",
    "gunicorn>=25.3.0",
    "joblib>=1.5.3",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pillow>=12.2.0",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "sift-stack-py>=0.13.0",
]
